Fixed the test data
The class should be V1PersistentVolumeClaimVolumeSource, not V1PersistentVolumeClaimSpec.

--- a/sdk/python/tests/compiler/testdata/artifact_passing_using_volume.yaml
+++ b/sdk/python/tests/compiler/testdata/artifact_passing_using_volume.yaml
@@ -138,5 +138,4 @@ spec:
   volumes:
   - name: data-storage
     persistentVolumeClaim:
-      spec:
-        volumeName: data-volume
+      claimName: data-volume
