--- a/backend/Dockerfile.bazel
+++ b/backend/Dockerfile.bazel
@@ -1,4 +1,5 @@
 FROM ubuntu:18.04 as builder
+ARG VERSION=0.24.0
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends software-properties-common \
@@ -19,7 +20,7 @@ RUN apt-get update \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-ENV BAZEL_VERSION=0.24.0
+ENV BAZEL_VERSION=$VERSION
 
 RUN mkdir -p /bazel \
     && cd /bazel \
