Fixed the container image
I though alpine had curl

--- a/components/datasets/Chicago Taxi/components.yaml
+++ b/components/datasets/Chicago Taxi/components.yaml
@@ -17,7 +17,7 @@ outputs:
 - {name: Table, description: 'Result type depends on format. CSV and TSV have header.'}
 implementation:
   container:
-    image: alpine
+    image: curlimages/curl
     command:
     - sh
     - -c
