--- a/components/aws/sagemaker/Dockerfile
+++ b/components/aws/sagemaker/Dockerfile
@@ -35,6 +35,7 @@ COPY hyperparameter_tuning/src/hyperparameter_tuning.py .
 COPY train/src/train.py .
 COPY deploy/src/deploy.py .
 COPY model/src/create_model.py .
+COPY process/src/process.py .
 COPY batch_transform/src/batch_transform.py .
 COPY workteam/src/workteam.py .
 COPY ground_truth/src/ground_truth.py .
