Add WORKDIR to fix Docker 18 support

--- a/components/aws/sagemaker/Dockerfile
+++ b/components/aws/sagemaker/Dockerfile
@@ -23,10 +23,12 @@ RUN yum update -y \
     unzip
 
 RUN pip3 install \
-    boto3==1.12.33 \
+    boto3==1.13.19 \
     sagemaker==1.54.0 \
     pathlib2==2.3.5 \
     pyyaml==3.12
+
+WORKDIR /app
 
 COPY LICENSE.txt .
 COPY NOTICE.txt .
