--- a/components/aws/sagemaker/tests/integration_tests/resources/config/sample-pipeline-training/config.yaml
+++ b/components/aws/sagemaker/tests/integration_tests/resources/config/sample-pipeline-training/config.yaml
@@ -1,4 +1,4 @@
-PipelineDefinition: resources/definition/sample_pipelines/training-pipeline.py
+PipelineDefinition: ../../../../../samples/contrib/aws-samples/simple_train_pipeline/training-pipeline.py
 TestName: sample-pipeline-training
 Timeout: 3600
 ExpectedTrainingImage: ((KMEANS_REGISTRY)).dkr.ecr.((REGION)).amazonaws.com/kmeans:1
