updated the components

--- a/components/gcp/bigquery/query/biqquery_query_op.yaml
+++ b/components/gcp/bigquery/query/biqquery_query_op.yaml
@@ -17,7 +17,7 @@
 name: Bigquery - Query
 description: |
   A Kubeflow Pipeline component to submit a query to Google Cloud Bigquery 
-  service and dump outputs to a Google Cloud Storage blob. 
+  service. 
 metadata:
   labels:
     add-pod-env: 'true'
