--- a/components/gcp/bigquery/query/biqquery_query_op.yaml
+++ b/components/gcp/bigquery/query/biqquery_query_op.yaml
@@ -57,7 +57,7 @@ inputs:
     type: UI metadata
 implementation:
   container:
-    image: gcr.io/ml-pipeline/ml-pipeline-gcp:ad9bd5648dd0453005225779f25d8cebebc7ca00
+    image: gcr.io/ds-production-259110/ml-pipeline-gcp
     args: [
       --ui_metadata_path, {outputPath: MLPipeline UI metadata},
       kfp_component.google.bigquery, query,
