--- a/components/gcp/bigquery/query/biqquery_query_op.yaml
+++ b/components/gcp/bigquery/query/biqquery_query_op.yaml
@@ -53,6 +53,7 @@ inputs:
       for details.
     default: ''
     type: Dict
+outputs:
   - name: MLPipeline UI metadata
     type: UI metadata
 implementation:
