--- a/components/gcp/bigquery/query/biqquery_query_op.yaml
+++ b/components/gcp/bigquery/query/biqquery_query_op.yaml
@@ -68,7 +68,7 @@ implementation:
       --table_id, {inputValue: table_id},
       --dataset_location, {inputValue: dataset_location},
       --job_config, {inputValue: job_config},
-      --write_to_table, False,
+      --write_to_table, "False",
     ]
     env:
       KFP_POD_NAME: "{{pod.name}}"
