--- a/components/gcp/bigquery/query/to_table/component.yaml
+++ b/components/gcp/bigquery/query/to_table/component.yaml
@@ -1,6 +1,6 @@
-# Export to file for next processing step in pipeline
+# export to new table. 
 
-# Copyright 2018 Google LLC
+# Copyright 2020 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -17,7 +17,7 @@
 name: Bigquery - Query
 description: |
   A Kubeflow Pipeline component to submit a query to Google Cloud Bigquery 
-  service. 
+  service and dump outputs to new table.
 metadata:
   labels:
     add-pod-env: 'true'
@@ -28,9 +28,15 @@ inputs:
   - name: project_id
     description: 'The project to execute the query job.'
     type: GCPProjectID
-  - name: output_kfp_path
-    description: 'The path to where the file should be stored.'
+  - name: dataset_id
+    description: 'The ID of the persistent dataset to keep the results of the query.'
     default: ''
+    type: String
+  - name: table_id
+    description: >-
+      The ID of the table to keep the results of the query. If absent, the operation
+      will generate a random id for the table.
+    default: '' 
     type: String
   - name: dataset_location
     description: 'The location to create the dataset. Defaults to `US`.'
@@ -51,9 +57,11 @@ implementation:
     image: gcr.io/ds-production-259110/ml-pipeline-gcp
     args: [
       --ui_metadata_path, {outputPath: MLPipeline UI metadata},
-      kfp_component.google.bigquery, query_only,
+      kfp_component.google.bigquery, query,
       --query, {inputValue: query},
       --project_id, {inputValue: project_id},
+      --dataset_id, {inputValue: dataset_id},
+      --table_id, {inputValue: table_id},
       --dataset_location, {inputValue: dataset_location},
       --job_config, {inputValue: job_config},
     ]
