add logging to other components

--- a/components/aws/sagemaker/model/component.yaml
+++ b/components/aws/sagemaker/model/component.yaml
@@ -59,7 +59,7 @@ outputs:
   - {name: model_name,          description: 'The model name Sagemaker created'}
 implementation:
   container:
-    image: amazon/aws-sagemaker-kfp-components:0.3.1
+    image: akartsky/aws-kubeflow-sagemaker:latest
     command: ['python3']
     args: [
       create_model.py,
