Update default properties

--- a/components/aws/sagemaker/common/process.template.yaml
+++ b/components/aws/sagemaker/common/process.template.yaml
@@ -12,7 +12,7 @@ ProcessingResources:
     VolumeKmsKeyId: ''
 NetworkConfig:
   EnableInterContainerTrafficEncryption: False
-  EnableNetworkIsolation: True
+  EnableNetworkIsolation: False
   VpcConfig:
     SecurityGroupIds: []
     Subnets: []
