--- a/manifests/gcp_marketplace/chart/kubeflow-pipelines/templates/application.yaml
+++ b/manifests/gcp_marketplace/chart/kubeflow-pipelines/templates/application.yaml
@@ -1,36 +1,34 @@
 apiVersion: app.k8s.io/v1beta1
 kind: Application
 metadata:
-  name: "{{ .Release.Name }}"
-  namespace: "{{ .Release.Namespace }}"
+  name: '{{ .Release.Name }}'
+  namespace: '{{ .Release.Namespace }}'
   annotations:
-    kubernetes-engine.cloud.google.com/icon: >-
-      data:image/png;base64,{{ .Files.Get "logo.png" | b64enc }}
+    kubernetes-engine.cloud.google.com/icon: data:image/png;base64,{{ .Files.Get "logo.png"
+      | b64enc }}
     marketplace.cloud.google.com/deploy-info: '{"partner_id": "google-cloud-ai-platform",
       "product_id": "kubeflow-pipelines", "partner_name": "Google Cloud AI Platform"}'
   labels:
-    app.kubernetes.io/name: "{{ .Release.Name }}"
+    app.kubernetes.io/name: '{{ .Release.Name }}'
 spec:
   descriptor:
     type: Kubeflow Pipelines
-    version: '0.5.1'
-    description: |-
-      Reusable end-to-end ML workflow
+    version: 0.5.1
+    description: Reusable end-to-end ML workflow
     maintainers:
     - name: Google Cloud AI Platform
       url: https://cloud.google.com/ai-platform/
     - name: Kubeflow Pipelines
       url: https://github.com/kubeflow/pipelines
     links:
-    - description: 'Kubeflow Pipelines Documentation'
+    - description: Kubeflow Pipelines Documentation
       url: https://www.kubeflow.org/docs/pipelines/
-    notes: |-
-      Please go to [Hosted Kubeflow Pipelines Console](https://console.cloud.google.com/ai-platform/pipelines/clusters).
+    notes: Please go to [Hosted Kubeflow Pipelines Console](https://console.cloud.google.com/ai-platform/pipelines/clusters).
   info:
   - name: Application Namespace
-    value: "{{ .Release.Namespace }}"
+    value: '{{ .Release.Namespace }}'
   - name: Console
-    value: 'https://console.cloud.google.com/ai-platform/pipelines/clusters'
+    value: https://console.cloud.google.com/ai-platform/pipelines/clusters
   componentKinds:
   - group: v1
     kind: ServiceAccount
@@ -48,4 +46,3 @@ spec:
     kind: Secret
   - group: apps/v1
     kind: Deployment
-'':
