--- a/manifests/gcp_marketplace/schema.yaml
+++ b/manifests/gcp_marketplace/schema.yaml
@@ -1,10 +1,9 @@
 x-google-marketplace:
   schemaVersion: v2
   applicationApiVersion: v1beta1
-  publishedVersion: '0.5.1'
+  publishedVersion: 0.5.1
   publishedVersionMetadata:
-    releaseNote: >-
-      Based on 0.5.1 version.
+    releaseNote: Based on 0.5.1 version.
     releaseTypes:
     - Feature
     recommended: false
@@ -87,11 +86,11 @@ x-google-marketplace:
           type: FULL
   deployerServiceAccount:
     roles:
-    - type: ClusterRole # This is a cluster-wide ClusterRole
-      rulesType: CUSTOM # We specify our own custom RBAC roles
+    - type: ClusterRole
+      rulesType: CUSTOM
       rules:
-      - apiGroups: ['apiextensions.k8s.io', 'rbac.authorization.k8s.io']
-        resources: ['customresourcedefinitions', 'clusterroles', 'clusterrolebindings']
+      - apiGroups: [apiextensions.k8s.io, rbac.authorization.k8s.io]
+        resources: [customresourcedefinitions, clusterroles, clusterrolebindings]
         verbs: ['*']
   clusterConstraints:
     resources:
@@ -163,4 +162,3 @@ properties:
 required:
 - name
 - namespace
-'':
