--- a/manifests/kustomize/base/cache-deployer/kustomization.yaml
+++ b/manifests/kustomize/base/cache-deployer/kustomization.yaml
@@ -4,6 +4,6 @@ kind: Kustomization
 resources:
   - cache-deployer-role.yaml
   - cache-deployer-rolebinding.yaml
-  - cache-deployer-sa.yaml
   - cache-deployer-deployment.yaml
+  - cluster-scoped/cache-deployer-sa.yaml
   
