--- a/components/CatBoost/Train_classifier/component.yaml
+++ b/components/CatBoost/Train_classifier/component.yaml
@@ -45,84 +45,113 @@ implementation:
     - sh
     - -c
     - (PIP_DISABLE_PIP_VERSION_CHECK=1 python3 -m pip install --quiet --no-warn-script-location
-      'catboost==0.22' || PIP_DISABLE_PIP_VERSION_CHECK=1 python3 -m pip install --quiet
-      --no-warn-script-location 'catboost==0.22' --user) && "$0" "$@"
+      'catboost==0.23' || PIP_DISABLE_PIP_VERSION_CHECK=1 python3 -m pip install --quiet
+      --no-warn-script-location 'catboost==0.23' --user) && "$0" "$@"
     - python3
     - -u
     - -c
-    - "def _make_parent_dirs_and_return_path(file_path: str):\n    import os\n   \
-      \ os.makedirs(os.path.dirname(file_path), exist_ok=True)\n    return file_path\n\
-      \ndef catboost_train_classifier(\n    training_data_path,\n    model_path,\n\
-      \    starting_model_path = None,\n    label_column = 0,\n\n    loss_function\
-      \ = 'Logloss',\n    num_iterations = 500,\n    learning_rate = None,\n    depth\
-      \ = 6,\n    random_seed = 0,\n\n    cat_features = None,\n    text_features\
-      \ = None,\n):\n    '''Train a CatBoost classifier model.\n\n    Args:\n    \
-      \    training_data_path: Path for the training data in CSV format.\n       \
-      \ model_path: Output path for the trained model in binary CatBoostClassifier\
-      \ format.\n        starting_model_path: Path for the existing trained model\
-      \ to start from.\n        label_column: Column containing the label data.\n\n\
-      \        loss_function: The metric to use in training and also selector of the\
-      \ machine learning\n            problem to solve. Default = 'Logloss'\n    \
-      \    num_iterations: Number of trees to add to the ensemble.\n        learning_rate:\
-      \ Step size shrinkage used in update to prevents overfitting.\n            Default\
-      \ value is selected automatically for binary classification with other parameters\
-      \ set to default.\n            In all other cases default is 0.03.\n       \
-      \ depth: Depth of a tree. All trees are the same depth. Default = 6\n      \
-      \  random_seed: Random number seed. Default = 0\n\n        cat_features: A list\
-      \ of Categorical features (indices or names).\n        text_features: A list\
-      \ of Text features (indices or names).\n\n    Outputs:\n        model: Trained\
-      \ model in binary CatBoostClassifier format.\n\n    Annotations:\n        author:\
-      \ Alexey Volkov <alexey.volkov@ark-kun.com>\n    '''\n    import tempfile\n\
-      \    from pathlib import Path\n\n    from catboost import CatBoostClassifier,\
-      \ Pool\n\n    column_descriptions = {label_column, 'Label'}\n    column_description_path\
-      \ = tempfile.NamedTemporaryFile(delete=False).name\n    with open(column_description_path,\
-      \ 'w') as column_description_file:\n        for idx, kind in column_descriptions.items():\n\
-      \            column_description_file.write('{}\\t{}\\n'.format(idx, kind))\n\
-      \n    train_data = Pool(\n        training_data_path,\n        column_description=column_description_path,\n\
-      \    )\n\n    model = CatBoostClassifier(\n        iterations=num_iterations,\n\
-      \        depth=depth,\n        learning_rate=learning_rate,\n        loss_function=loss_function,\n\
-      \        verbose=True,\n    )\n\n    model.fit(\n        train_data,\n     \
-      \   train_labels=None,\n        cat_features=cat_features,\n        text_features=text_features,\
-      \         \n        init_model=starting_model_path,\n        #verbose=False,\n\
-      \        plot=True,\n    )\n    Path(model_path).parent.mkdir(parents=True,\
-      \ exist_ok=True)\n    model.save_model(model_path)\n\nimport json\nimport argparse\n\
-      _parser = argparse.ArgumentParser(prog='Catboost train classifier', description=\"\
-      Train a CatBoost classifier model.\\n\\n    Args:\\n        training_data_path:\
-      \ Path for the training data in CSV format.\\n        model_path: Output path\
-      \ for the trained model in binary CatBoostClassifier format.\\n        starting_model_path:\
-      \ Path for the existing trained model to start from.\\n        label_column:\
-      \ Column containing the label data.\\n\\n        loss_function: The metric to\
-      \ use in training and also selector of the machine learning\\n            problem\
-      \ to solve. Default = 'Logloss'\\n        num_iterations: Number of trees to\
-      \ add to the ensemble.\\n        learning_rate: Step size shrinkage used in\
-      \ update to prevents overfitting.\\n            Default value is selected automatically\
-      \ for binary classification with other parameters set to default.\\n       \
-      \     In all other cases default is 0.03.\\n        depth: Depth of a tree.\
-      \ All trees are the same depth. Default = 6\\n        random_seed: Random number\
-      \ seed. Default = 0\\n\\n        cat_features: A list of Categorical features\
-      \ (indices or names).\\n        text_features: A list of Text features (indices\
-      \ or names).\\n\\n    Outputs:\\n        model: Trained model in binary CatBoostClassifier\
-      \ format.\\n\\n    Annotations:\\n        author: Alexey Volkov <alexey.volkov@ark-kun.com>\"\
-      )\n_parser.add_argument(\"--training-data\", dest=\"training_data_path\", type=str,\
-      \ required=True, default=argparse.SUPPRESS)\n_parser.add_argument(\"--starting-model\"\
-      , dest=\"starting_model_path\", type=str, required=False, default=argparse.SUPPRESS)\n\
-      _parser.add_argument(\"--label-column\", dest=\"label_column\", type=int, required=False,\
-      \ default=argparse.SUPPRESS)\n_parser.add_argument(\"--loss-function\", dest=\"\
-      loss_function\", type=str, required=False, default=argparse.SUPPRESS)\n_parser.add_argument(\"\
-      --num-iterations\", dest=\"num_iterations\", type=int, required=False, default=argparse.SUPPRESS)\n\
-      _parser.add_argument(\"--learning-rate\", dest=\"learning_rate\", type=float,\
-      \ required=False, default=argparse.SUPPRESS)\n_parser.add_argument(\"--depth\"\
-      , dest=\"depth\", type=int, required=False, default=argparse.SUPPRESS)\n_parser.add_argument(\"\
-      --random-seed\", dest=\"random_seed\", type=int, required=False, default=argparse.SUPPRESS)\n\
-      _parser.add_argument(\"--cat-features\", dest=\"cat_features\", type=json.loads,\
-      \ required=False, default=argparse.SUPPRESS)\n_parser.add_argument(\"--text-features\"\
-      , dest=\"text_features\", type=json.loads, required=False, default=argparse.SUPPRESS)\n\
-      _parser.add_argument(\"--model\", dest=\"model_path\", type=_make_parent_dirs_and_return_path,\
-      \ required=True, default=argparse.SUPPRESS)\n_parsed_args = vars(_parser.parse_args())\n\
-      _output_files = _parsed_args.pop(\"_output_paths\", [])\n\n_outputs = catboost_train_classifier(**_parsed_args)\n\
-      \n_output_serializers = [\n\n]\n\nimport os\nfor idx, output_file in enumerate(_output_files):\n\
-      \    try:\n        os.makedirs(os.path.dirname(output_file))\n    except OSError:\n\
-      \        pass\n    with open(output_file, 'w') as f:\n        f.write(_output_serializers[idx](_outputs[idx]))\n"
+    - |
+      def _make_parent_dirs_and_return_path(file_path: str):
+          import os
+          os.makedirs(os.path.dirname(file_path), exist_ok=True)
+          return file_path
+
+      def catboost_train_classifier(
+          training_data_path,
+          model_path,
+          starting_model_path = None,
+          label_column = 0,
+
+          loss_function = 'Logloss',
+          num_iterations = 500,
+          learning_rate = None,
+          depth = 6,
+          random_seed = 0,
+
+          cat_features = None,
+          text_features = None,
+      ):
+          '''Train a CatBoost classifier model.
+
+          Args:
+              training_data_path: Path for the training data in CSV format.
+              model_path: Output path for the trained model in binary CatBoostClassifier format.
+              starting_model_path: Path for the existing trained model to start from.
+              label_column: Column containing the label data.
+
+              loss_function: The metric to use in training and also selector of the machine learning
+                  problem to solve. Default = 'Logloss'
+              num_iterations: Number of trees to add to the ensemble.
+              learning_rate: Step size shrinkage used in update to prevents overfitting.
+                  Default value is selected automatically for binary classification with other parameters set to default.
+                  In all other cases default is 0.03.
+              depth: Depth of a tree. All trees are the same depth. Default = 6
+              random_seed: Random number seed. Default = 0
+
+              cat_features: A list of Categorical features (indices or names).
+              text_features: A list of Text features (indices or names).
+
+          Outputs:
+              model: Trained model in binary CatBoostClassifier format.
+
+          Annotations:
+              author: Alexey Volkov <alexey.volkov@ark-kun.com>
+          '''
+          import tempfile
+          from pathlib import Path
+
+          from catboost import CatBoostClassifier, Pool
+
+          column_descriptions = {label_column: 'Label'}
+          column_description_path = tempfile.NamedTemporaryFile(delete=False).name
+          with open(column_description_path, 'w') as column_description_file:
+              for idx, kind in column_descriptions.items():
+                  column_description_file.write('{}\t{}\n'.format(idx, kind))
+
+          train_data = Pool(
+              training_data_path,
+              column_description=column_description_path,
+              has_header=True,
+              delimiter=',',
+          )
+
+          model = CatBoostClassifier(
+              iterations=num_iterations,
+              depth=depth,
+              learning_rate=learning_rate,
+              loss_function=loss_function,
+              random_seed=random_seed,
+              verbose=True,
+          )
+
+          model.fit(
+              train_data,
+              cat_features=cat_features,
+              text_features=text_features,
+              init_model=starting_model_path,
+              #verbose=False,
+              #plot=True,
+          )
+          Path(model_path).parent.mkdir(parents=True, exist_ok=True)
+          model.save_model(model_path)
+
+      import json
+      import argparse
+      _parser = argparse.ArgumentParser(prog='Catboost train classifier', description="Train a CatBoost classifier model.\n\n    Args:\n        training_data_path: Path for the training data in CSV format.\n        model_path: Output path for the trained model in binary CatBoostClassifier format.\n        starting_model_path: Path for the existing trained model to start from.\n        label_column: Column containing the label data.\n\n        loss_function: The metric to use in training and also selector of the machine learning\n            problem to solve. Default = 'Logloss'\n        num_iterations: Number of trees to add to the ensemble.\n        learning_rate: Step size shrinkage used in update to prevents overfitting.\n            Default value is selected automatically for binary classification with other parameters set to default.\n            In all other cases default is 0.03.\n        depth: Depth of a tree. All trees are the same depth. Default = 6\n        random_seed: Random number seed. Default = 0\n\n        cat_features: A list of Categorical features (indices or names).\n        text_features: A list of Text features (indices or names).\n\n    Outputs:\n        model: Trained model in binary CatBoostClassifier format.\n\n    Annotations:\n        author: Alexey Volkov <alexey.volkov@ark-kun.com>")
+      _parser.add_argument("--training-data", dest="training_data_path", type=str, required=True, default=argparse.SUPPRESS)
+      _parser.add_argument("--starting-model", dest="starting_model_path", type=str, required=False, default=argparse.SUPPRESS)
+      _parser.add_argument("--label-column", dest="label_column", type=int, required=False, default=argparse.SUPPRESS)
+      _parser.add_argument("--loss-function", dest="loss_function", type=str, required=False, default=argparse.SUPPRESS)
+      _parser.add_argument("--num-iterations", dest="num_iterations", type=int, required=False, default=argparse.SUPPRESS)
+      _parser.add_argument("--learning-rate", dest="learning_rate", type=float, required=False, default=argparse.SUPPRESS)
+      _parser.add_argument("--depth", dest="depth", type=int, required=False, default=argparse.SUPPRESS)
+      _parser.add_argument("--random-seed", dest="random_seed", type=int, required=False, default=argparse.SUPPRESS)
+      _parser.add_argument("--cat-features", dest="cat_features", type=json.loads, required=False, default=argparse.SUPPRESS)
+      _parser.add_argument("--text-features", dest="text_features", type=json.loads, required=False, default=argparse.SUPPRESS)
+      _parser.add_argument("--model", dest="model_path", type=_make_parent_dirs_and_return_path, required=True, default=argparse.SUPPRESS)
+      _parsed_args = vars(_parser.parse_args())
+
+      _outputs = catboost_train_classifier(**_parsed_args)
     args:
     - --training-data
     - {inputPath: training_data}
