--- a/components/CatBoost/convert_CatBoostModel_to_ONNX/component.yaml
+++ b/components/CatBoost/convert_CatBoostModel_to_ONNX/component.yaml
@@ -12,7 +12,7 @@ description: |-
       Annotations:
           author: Alexey Volkov <alexey.volkov@ark-kun.com>
 inputs:
-- {name: model, type: CatBoostClassifierModel}
+- {name: model, type: CatBoostModel}
 outputs:
 - {name: converted_model, type: ONNX}
 implementation:
@@ -60,22 +60,8 @@ implementation:
       _parser.add_argument("--model", dest="model_path", type=str, required=True, default=argparse.SUPPRESS)
       _parser.add_argument("--converted-model", dest="converted_model_path", type=_make_parent_dirs_and_return_path, required=True, default=argparse.SUPPRESS)
       _parsed_args = vars(_parser.parse_args())
-      _output_files = _parsed_args.pop("_output_paths", [])
 
       _outputs = convert_CatBoostModel_to_ONNX(**_parsed_args)
-
-      _output_serializers = [
-
-      ]
-
-      import os
-      for idx, output_file in enumerate(_output_files):
-          try:
-              os.makedirs(os.path.dirname(output_file))
-          except OSError:
-              pass
-          with open(output_file, 'w') as f:
-              f.write(_output_serializers[idx](_outputs[idx]))
     args:
     - --model
     - {inputPath: model}
