Simplify var replacement with direct configmap value ref

--- a/manifests/kustomize/base/argo/workflow-controller-configmap.yaml
+++ b/manifests/kustomize/base/argo/workflow-controller-configmap.yaml
@@ -10,7 +10,7 @@ data:
     artifactRepository:
     {
         s3: {
-            bucket: $(BUCKET_NAME),
+            bucket: $(kfp-artifact-bucket-name),
             keyPrefix: artifacts,
             endpoint: minio-service.$(kfp-namespace):9000,
             insecure: true,
