--- a/manifests/kustomize/base/pipeline/ml-pipeline-apiserver-deployment.yaml
+++ b/manifests/kustomize/base/pipeline/ml-pipeline-apiserver-deployment.yaml
@@ -39,18 +39,18 @@ spec:
         - name: DBCONFIG_DBNAME
           valueFrom:
             configMapKeyRef:
-              name: mysql-configmap
-              key: pipeline_db
+              name: pipeline-install-config
+              key: pipelineDb
         - name: DBCONFIG_HOST
           valueFrom:
             configMapKeyRef:
-              name: mysql-configmap
-              key: host
+              name: pipeline-install-config
+              key: dbHost
         - name: DBCONFIG_PORT
           valueFrom:
             configMapKeyRef:
-              name: mysql-configmap
-              key: port
+              name: pipeline-install-config
+              key: dbPort
         image: gcr.io/ml-pipeline/api-server:dummy
         imagePullPolicy: IfNotPresent
         name: ml-pipeline-api-server
