--- a/components/CatBoost/convert_CatBoostModel_to_AppleCoreMLModel/component.yaml
+++ b/components/CatBoost/convert_CatBoostModel_to_AppleCoreMLModel/component.yaml
@@ -12,7 +12,7 @@ description: |-
       Annotations:
           author: Alexey Volkov <alexey.volkov@ark-kun.com>
 inputs:
-- {name: model, type: CatBoostClassifierModel}
+- {name: model, type: CatBoostModel}
 outputs:
 - {name: converted_model, type: AppleCoreMLModel}
 implementation:
@@ -53,29 +53,20 @@ implementation:
 
           model = CatBoost()
           model.load_model(model_path)
-          model.save_model(converted_model_path, format="coreml", export_parameters={'prediction_type': 'probability'})
+          model.save_model(
+              converted_model_path,
+              format="coreml",
+              # export_parameters={'prediction_type': 'probability'},
+              # export_parameters={'prediction_type': 'raw'},
+          )
 
       import argparse
       _parser = argparse.ArgumentParser(prog='Convert CatBoostModel to AppleCoreMLModel', description='Convert CatBoost model to Apple CoreML format.\n\n    Args:\n        model_path: Path of a trained model in binary CatBoost model format.\n        converted_model_path: Output path for the converted model.\n\n    Outputs:\n        converted_model: Model in Apple CoreML format.\n\n    Annotations:\n        author: Alexey Volkov <alexey.volkov@ark-kun.com>')
       _parser.add_argument("--model", dest="model_path", type=str, required=True, default=argparse.SUPPRESS)
       _parser.add_argument("--converted-model", dest="converted_model_path", type=_make_parent_dirs_and_return_path, required=True, default=argparse.SUPPRESS)
       _parsed_args = vars(_parser.parse_args())
-      _output_files = _parsed_args.pop("_output_paths", [])
 
       _outputs = convert_CatBoostModel_to_AppleCoreMLModel(**_parsed_args)
-
-      _output_serializers = [
-
-      ]
-
-      import os
-      for idx, output_file in enumerate(_output_files):
-          try:
-              os.makedirs(os.path.dirname(output_file))
-          except OSError:
-              pass
-          with open(output_file, 'w') as f:
-              f.write(_output_serializers[idx](_outputs[idx]))
     args:
     - --model
     - {inputPath: model}
