Fixed the input type

--- a/components/CatBoost/Predict_classes/from_CSV/component.yaml
+++ b/components/CatBoost/Predict_classes/from_CSV/component.yaml
@@ -4,7 +4,7 @@ description: |-
 
       Args:
           data_path: Path for the data in CSV format.
-          model_path: Path for the trained model in binary CatBoostClassifier format.
+          model_path: Path for the trained model in binary CatBoostModel format.
           label_column: Column containing the label data.
           predictions_path: Output path for the predictions.
 
@@ -15,7 +15,7 @@ description: |-
           author: Alexey Volkov <alexey.volkov@ark-kun.com>
 inputs:
 - {name: data, type: CSV}
-- {name: model, type: CatBoostClassifierModel}
+- {name: model, type: CatBoostModel}
 - {name: label_column, type: Integer, optional: true}
 outputs:
 - {name: predictions}
@@ -48,7 +48,7 @@ implementation:
 
           Args:
               data_path: Path for the data in CSV format.
-              model_path: Path for the trained model in binary CatBoostClassifier format.
+              model_path: Path for the trained model in binary CatBoostModel format.
               label_column: Column containing the label data.
               predictions_path: Output path for the predictions.
 
@@ -84,7 +84,7 @@ implementation:
           numpy.savetxt(predictions_path, predictions)
 
       import argparse
-      _parser = argparse.ArgumentParser(prog='Catboost predict classes', description='Predict classes using the CatBoost classifier model.\n\n    Args:\n        data_path: Path for the data in CSV format.\n        model_path: Path for the trained model in binary CatBoostClassifier format.\n        label_column: Column containing the label data.\n        predictions_path: Output path for the predictions.\n\n    Outputs:\n        predictions: Class predictions in text format.\n\n    Annotations:\n        author: Alexey Volkov <alexey.volkov@ark-kun.com>')
+      _parser = argparse.ArgumentParser(prog='Catboost predict classes', description='Predict classes using the CatBoost classifier model.\n\n    Args:\n        data_path: Path for the data in CSV format.\n        model_path: Path for the trained model in binary CatBoostModel format.\n        label_column: Column containing the label data.\n        predictions_path: Output path for the predictions.\n\n    Outputs:\n        predictions: Class predictions in text format.\n\n    Annotations:\n        author: Alexey Volkov <alexey.volkov@ark-kun.com>')
       _parser.add_argument("--data", dest="data_path", type=str, required=True, default=argparse.SUPPRESS)
       _parser.add_argument("--model", dest="model_path", type=str, required=True, default=argparse.SUPPRESS)
       _parser.add_argument("--label-column", dest="label_column", type=int, required=False, default=argparse.SUPPRESS)
