--- a/components/CatBoost/Predict_classes/from_CSV/component.yaml
+++ b/components/CatBoost/Predict_classes/from_CSV/component.yaml
@@ -75,6 +75,8 @@ implementation:
           eval_data = Pool(
               data_path,
               column_description=column_description_path,
+              has_header=True,
+              delimiter=',',
           )
 
           model = CatBoostClassifier()
